<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:divider="@android:color/darker_gray"
    android:dividerPadding="2dp"
    android:orientation="vertical"
    android:showDividers="beginning"
    tools:context="activities.MainActivity" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/contacts_create_contact_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/contacts_create_contact" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    
    <Button
        android:id="@+id/contacts_send_message_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/contacts_send_message_contact" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/contacts_block_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/contacts_block_contact" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/contacts_unblock_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/contacts_unblock_contact" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/contacts_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:text="@string/contacts_delete_contact"/>

</LinearLayout>